Media queries added

--- a/GOLDE-PROJECT/Index.html
+++ b/GOLDE-PROJECT/Index.html
@@ -3,21 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Golde-Golde</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTRiY3HJPOKFWBS_LZHPlvRDkSoRyv0V0Pe5A&s"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
     <link rel="stylesheet" href="Index.css" />
   </head>
-
   <body>
     <p id="nav-top">Free shipping on orders $60+</p>
     <div class="navbar">
       <div class="navbar-left">
-        <a href="#">Shop<i class="fa-solid fa-caret-down"></i></a>
+        <a href="#">Shop</a>
         <a href="#">About</a>
         <a href="#">Wholesale</a>
+        <svg
+          class="hamburger"
+          fill="none"
+          height="28"
+          viewBox="0 0 28 28"
+          width="28"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g stroke="currentColor" stroke-linecap="round" stroke-width="2">
+            <path d="m4.5 7h19"></path>
+            <path d="m4.5 14h19"></path>
+            <path d="m4.5 21h19"></path>
+          </g>
+        </svg>
       </div>
       <div class="navbar-center">
         <svg
